{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 37,
  "lineage": "063eaf97-7a84-c9c5-206a-ca115e5688de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_terraform_ec2_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01376101673c89611",
            "arn": "arn:aws:ec2:ap-south-1:160071257600:instance/i-07c9ac857b475861e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c9ac857b475861e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0175f969d872d51be",
            "private_dns": "ip-10-0-1-44.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ede10e1f8f23288e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-098fb64942e6077e8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026ce1c5a5cea7885",
            "tags": {
              "Name": "my-terraform-learning-EC2-Instance"
            },
            "tags_all": {
              "Name": "my-terraform-learning-EC2-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098fb64942e6077e8"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:160071257600:internet-gateway/igw-051a9729909145819",
            "id": "igw-051a9729909145819",
            "owner_id": "160071257600",
            "tags": {
              "Name": "my-terraform-learning-IGW"
            },
            "tags_all": {
              "Name": "my-terraform-learning-IGW"
            },
            "vpc_id": "vpc-0896031c5dc4ff119"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:160071257600:route-table/rtb-0e128be78221f8bdb",
            "id": "rtb-0e128be78221f8bdb",
            "owner_id": "160071257600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051a9729909145819",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-terraform-learning-routeTable"
            },
            "tags_all": {
              "Name": "my-terraform-learning-routeTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0896031c5dc4ff119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_IGW",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_routeTable_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058470e7afe4370f3",
            "route_table_id": "rtb-0e128be78221f8bdb",
            "subnet_id": "subnet-026ce1c5a5cea7885"
          },
          "dependencies": [
            "aws_internet_gateway.my_IGW",
            "aws_route_table.my_routeTable",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:160071257600:security-group/sg-098fb64942e6077e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098fb64942e6077e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240710090901515200000001",
            "name_prefix": "terraform-",
            "owner_id": "160071257600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-terraform-learning-security-group"
            },
            "tags_all": {
              "Name": "my-terraform-learning-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0896031c5dc4ff119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:160071257600:subnet/subnet-026ce1c5a5cea7885",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026ce1c5a5cea7885",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-learning-subnet"
            },
            "tags_all": {
              "Name": "my-terraform-learning-subnet"
            },
            "vpc_id": "vpc-0896031c5dc4ff119"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:160071257600:vpc/vpc-0896031c5dc4ff119",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06cdeef7704401a0e",
            "default_route_table_id": "rtb-0633b2254c4ee592c",
            "default_security_group_id": "sg-06f637cb49016405e",
            "dhcp_options_id": "dopt-084e47fec1c645444",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0896031c5dc4ff119",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0633b2254c4ee592c",
            "owner_id": "160071257600",
            "tags": {
              "Name": "my-terraform-learning-vpc"
            },
            "tags_all": {
              "Name": "my-terraform-learning-vpc"
            }
          }
        }
      ]
    }
  ]
}